# gtg

./: README.md  meson.build
GTG/backends/: backend_localfile.py
GTG/core/: firstrun_tasks.py  xml.py
GTG/gtk/editor/: editor.py  serialize.py
scripts/: anonymize_task_file.py
